Mapped out the majority of the tablet and down responsiveness, need to commit to style sheet to lay everything out

--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Sep 28 2020 05:20:39 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Sep 29 2020 06:44:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -39,7 +39,7 @@
           <h3 class="ailment_h3">MUSCOSKELETAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Ankle Pain</li>
                 <li class="ailment_list_item">Arthritis</li>
                 <li class="ailment_list_item">Bursitis</li>
@@ -52,7 +52,7 @@
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Hip Pain</li>
                 <li class="ailment_list_item">Injury Recovery</li>
                 <li class="ailment_list_item">Knee Pain</li>
@@ -64,7 +64,7 @@
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Osteoarthritis</li>
                 <li class="ailment_list_item">Sciatica</li>
                 <li class="ailment_list_item">Sprain / Strain</li>
@@ -83,7 +83,7 @@
           <h3 class="ailment_h3">NEUROLOGICAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Autism</li>
                 <li class="ailment_list_item">Face Pain</li>
                 <li class="ailment_list_item">Facial Paralysis</li>
@@ -92,7 +92,7 @@
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Neuralgia</li>
                 <li class="ailment_list_item">Neurological Disorder Rehabilitation</li>
                 <li class="ailment_list_item">Palsy</li>
@@ -100,7 +100,7 @@
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Post-Operative / Surgery Recovery</li>
                 <li class="ailment_list_item">Stroke</li>
                 <li class="ailment_list_item">Tics</li>
@@ -121,16 +121,16 @@
           <h3 class="ailment_h3">CHRONIC CONDITIONS</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Cysts</li>
                 <li class="ailment_list_item">Diabetes</li>
-                <li class="ailment_list_item">High Cholesterol / Hypercholesterolemia</li>
+                <li class="ailment_list_item">High Cholesterol / Hyper-cholesterolemia</li>
                 <li class="ailment_list_item">Hepatitis</li>
                 <li class="ailment_list_item">Hypertension (HBP)</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Hypoglycemia</li>
                 <li class="ailment_list_item">Infections</li>
                 <li class="ailment_list_item">Liver Diseases</li>
@@ -138,7 +138,7 @@
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Phlebitis</li>
                 <li class="ailment_list_item">Thrombosis</li>
                 <li class="ailment_list_item">Thyroid Disorders</li>
@@ -153,7 +153,7 @@
           <h3 class="ailment_h3">EYE, EAR, NOSE, THROAT</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Allergies</li>
                 <li class="ailment_list_item">Dizziness</li>
                 <li class="ailment_list_item">Ear Ache</li>
@@ -161,7 +161,7 @@
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Eye Problems</li>
                 <li class="ailment_list_item">Hay Fever</li>
                 <li class="ailment_list_item">Meniere&#x27;s Disease</li>
@@ -169,7 +169,7 @@
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Sinusitis</li>
                 <li class="ailment_list_item">Sore Throat</li>
                 <li class="ailment_list_item">Tonsillitis</li>
@@ -190,7 +190,7 @@
           <h3 class="ailment_h3">GYNECOLOGICAL, GENITOURINARY, REPRODUCTIVE</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Breech Position</li>
                 <li class="ailment_list_item">Chronic Bladder Infection</li>
                 <li class="ailment_list_item">Endometriosis</li>
@@ -200,7 +200,7 @@
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Hormone Imbalance</li>
                 <li class="ailment_list_item">Hot Flashes</li>
                 <li class="ailment_list_item">Inducing Birth</li>
@@ -210,7 +210,7 @@
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Miscarriage</li>
                 <li class="ailment_list_item">Morning Sickness</li>
                 <li class="ailment_list_item">Premenstrual Syndrome (PMS)</li>
@@ -227,20 +227,20 @@
           <h3 class="ailment_h3">RESPIRATORY</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Asthma</li>
                 <li class="ailment_list_item">Bronchitis</li>
                 <li class="ailment_list_item">Common Cold</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Emphysema</li>
                 <li class="ailment_list_item">Flu</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Pheumonia</li>
                 <li class="ailment_list_item">Valley Fever</li>
               </ul>
@@ -262,21 +262,21 @@
           <h3 class="ailment_h3">EMOTIONAL, PHYSCOLOGICAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Anxiety</li>
                 <li class="ailment_list_item">Depression</li>
                 <li class="ailment_list_item">Insomnia</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Panic Attacks</li>
                 <li class="ailment_list_item">Restless Leg Syndrome</li>
                 <li class="ailment_list_item">Seasonal Affective Disorder (SAD)</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Sleep Disturbances</li>
                 <li class="ailment_list_item">Stress</li>
               </ul>
@@ -289,7 +289,7 @@
           <h3 class="ailment_h3">GASTROINTESTINAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Abdominal Bloating</li>
                 <li class="ailment_list_item">Abdominal Pain</li>
                 <li class="ailment_list_item">Colitis</li>
@@ -299,7 +299,7 @@
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Food Allergies</li>
                 <li class="ailment_list_item">Gastritis</li>
                 <li class="ailment_list_item">Heartburn</li>
@@ -308,7 +308,7 @@
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Indigestion</li>
                 <li class="ailment_list_item">Irritable Bowel Syndrome (IBS)</li>
                 <li class="ailment_list_item">Nausea</li>
@@ -330,19 +330,19 @@
           <h3 class="ailment_h3">AUTOIMMUNE DISORDERS</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Crohn&#x27;s Disease</li>
                 <li class="ailment_list_item">Grave&#x27;s Disease</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Lupus</li>
                 <li class="ailment_list_item">Psoriatic Arthritis</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Rheumatoid Arthritis</li>
               </ul>
             </div>
@@ -354,17 +354,17 @@
           <h3 class="ailment_h3">UROLOGICAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Incontinence</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Urinary Dysfunction</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Urinary Tract Infection (UTI)</li>
               </ul>
             </div>
@@ -382,19 +382,19 @@
           <h3 class="ailment_h3">IMMUNE SYSTEM</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Candida</li>
                 <li class="ailment_list_item">Chronic Fatigue</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Fibromayalga</li>
                 <li class="ailment_list_item">HIV &amp; AIDS</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Multiple Sclerosis</li>
                 <li class="ailment_list_item">Weak / Imbalanced Immune System</li>
               </ul>
@@ -407,17 +407,17 @@
           <h3 class="ailment_h3">DERMATOLOGICAL</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Acne</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Eczema</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Psoriasis</li>
               </ul>
             </div>
@@ -435,17 +435,17 @@
           <h3 class="ailment_h3">CIRCULATORY</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Heart Conditions</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">High Blood Pressure</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Low Blood Pressure</li>
               </ul>
             </div>
@@ -457,18 +457,18 @@
           <h3 class="ailment_h3">ADDICTION</h3>
           <div class="_3_block_row">
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Alcohol</li>
                 <li class="ailment_list_item">Drug Abuse</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Smoking</li>
               </ul>
             </div>
             <div class="_3_block">
-              <ul role="list">
+              <ul role="list" class="ailment_list w-list-unstyled">
                 <li class="ailment_list_item">Weight Loss</li>
               </ul>
             </div>
@@ -511,7 +511,7 @@
         <div class="_4_block">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
+            <ul role="list" class="list w-list-unstyled">
               <li>Mon: 9:30AM - 6:00PM</li>
               <li>Tue: 10:00AM - 2:00PM</li>
               <li>Wed: 9:30AM - 6:00PM</li>
@@ -525,7 +525,7 @@
         <div class="_4_block">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
+            <ul role="list" class="list-2 w-list-unstyled">
               <li><a href="#" class="footer_link">3808 W. Riverside Dr. - Suite 510</a></li>
               <li>Burbank, CA 91505</li>
               <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
