--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Sep 28 2020 05:20:39 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Sep 29 2020 06:44:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -81,7 +81,7 @@
         <div class="_4_block">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
+            <ul role="list" class="list w-list-unstyled">
               <li>Mon: 9:30AM - 6:00PM</li>
               <li>Tue: 10:00AM - 2:00PM</li>
               <li>Wed: 9:30AM - 6:00PM</li>
@@ -95,7 +95,7 @@
         <div class="_4_block">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
+            <ul role="list" class="list-2 w-list-unstyled">
               <li><a href="#" class="footer_link">3808 W. Riverside Dr. - Suite 510</a></li>
               <li>Burbank, CA 91505</li>
               <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
