--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Sep 28 2020 05:20:39 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Sep 29 2020 06:44:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -72,17 +72,17 @@
       <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="cards_grid">
         <div id="w-node-bb3cbd291ef5-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/needles_close_up.jpg" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/needles_close_up.jpg" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, 31vw" alt="" class="cards_img"></div>
           <h3 class="card_h3">Acupuncture</h3>
           <p class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
         <div id="w-node-bb3cbd291f03-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, 31vw" alt="" class="cards_img"></div>
           <h3 id="w-node-bb3cbd291f06-bfb09bd8" class="card_h3">Traditional Chinese Herbs</h3>
           <p id="w-node-bb3cbd291f08-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
         <div id="w-node-bb3cbd291efc-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/cupping.jpg" srcset="images/cupping-p-500.jpeg 500w, images/cupping-p-800.jpeg 800w, images/cupping.jpg 900w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/cupping.jpg" srcset="images/cupping-p-500.jpeg 500w, images/cupping-p-800.jpeg 800w, images/cupping.jpg 900w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, 31vw" alt="" class="cards_img"></div>
           <h3 id="w-node-bb3cbd291eff-bfb09bd8" class="card_h3">Cupping</h3>
           <p id="w-node-bb3cbd291f01-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
@@ -99,7 +99,7 @@
           <p id="w-node-7dade4327f1a-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
         <div id="w-node-7dade4327f1c-bfb09bd8" class="card">
-          <div class="crads_img_mask"><img src="images/infrared_light_treatment.jpg" srcset="images/infrared_light_treatment-p-500.jpeg 500w, images/infrared_light_treatment.jpg 679w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/infrared_light_treatment.jpg" srcset="images/infrared_light_treatment-p-500.jpeg 500w, images/infrared_light_treatment.jpg 679w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, 31vw" alt="" class="cards_img"></div>
           <h3 id="w-node-7dade4327f1f-bfb09bd8" class="card_h3">Heat Therapy</h3>
           <p id="w-node-7dade4327f21-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
@@ -227,7 +227,7 @@
         <div class="_4_block">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
+            <ul role="list" class="list w-list-unstyled">
               <li>Mon: 9:30AM - 6:00PM</li>
               <li>Tue: 10:00AM - 2:00PM</li>
               <li>Wed: 9:30AM - 6:00PM</li>
@@ -241,7 +241,7 @@
         <div class="_4_block">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
+            <ul role="list" class="list-2 w-list-unstyled">
               <li><a href="#" class="footer_link">3808 W. Riverside Dr. - Suite 510</a></li>
               <li>Burbank, CA 91505</li>
               <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
