--- a/ourteam.html
+++ b/ourteam.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Sep 28 2020 05:20:39 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Sep 29 2020 06:44:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -33,13 +33,13 @@
       <h4 class="ryu_h4">Founder and chief practitioner of Ryu Acupuncture Clinic, Inc. He has been been providing world-class care to patients across Southern California for 23+ years with superior results. More info, more info, more info, more info, more info, more info.</h4>
       <div class="_2_block_row">
         <div class="_45_block margin_right">
-          <p>Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean.  Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
+          <p class="paragraph-7">Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean.  Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
         </div>
-        <div class="_55_block margin_left"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 52vw, 53vw" alt=""></div>
+        <div class="_55_block margin_left"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 47vw, (max-width: 991px) 48vw, 53vw" alt=""></div>
       </div>
       <div class="blue_divide"></div>
       <div class="_2_block_row margin_bottom">
-        <div class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 29vw, (max-width: 767px) 31vw, 32vw" alt="" class="image"></div>
+        <div class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 90vw, (max-width: 991px) 28vw, 32vw" alt="" class="image"></div>
         <div class="_65_block margin_left">
           <h2 class="section_h2_left">Veronica Ryu, L.Ac.</h2>
           <h4 class="ryu_h4">Specialties:</h4>
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="_2_block_row margin_top">
-        <div class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 29vw, (max-width: 767px) 31vw, 32vw" alt=""></div>
+        <div class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 90vw, (max-width: 991px) 28vw, 32vw" alt=""></div>
         <div class="_65_block margin_left">
           <h2 class="section_h2_left">Jennifer Ryu, L.Ac.</h2>
           <h4 class="ryu_h4">Specialties:</h4>
@@ -93,7 +93,7 @@
         <div class="_4_block">
           <h3 class="footer_h3">Hours</h3>
           <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
+            <ul role="list" class="list w-list-unstyled">
               <li>Mon: 9:30AM - 6:00PM</li>
               <li>Tue: 10:00AM - 2:00PM</li>
               <li>Wed: 9:30AM - 6:00PM</li>
@@ -107,7 +107,7 @@
         <div class="_4_block">
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
+            <ul role="list" class="list-2 w-list-unstyled">
               <li><a href="#" class="footer_link">3808 W. Riverside Dr. - Suite 510</a></li>
               <li>Burbank, CA 91505</li>
               <li>Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
