--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Sep 29 2020 06:56:10 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Sep 29 2020 08:25:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -20,11 +20,11 @@
   <div id="Hero" class="hero_section">
     <div data-poster-url="videos/ryu_acupuncture_hero-poster-00001.jpg" data-video-urls="videos/ryu_acupuncture_hero-transcode.mp4,videos/ryu_acupuncture_hero-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/ryu_acupuncture_hero-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover"><source src="videos/ryu_acupuncture_hero-transcode.mp4" data-wf-ignore="true"><source src="videos/ryu_acupuncture_hero-transcode.webm" data-wf-ignore="true"></video>
       <h1 class="ryu_title">Ryu Acupuncture Clinic, Inc</h1>
-      <h1 class="ryu_tagline">&quot;Wellness is a journey...&quot;</h1><a href="#" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a></div>
+      <h1 class="ryu_tagline">&quot;Wellness is a journey...&quot;</h1><a href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a></div>
   </div>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
-      <nav role="navigation" class="w-nav-menu"><a href="index.html" aria-current="page" class="nav-link-6 w-nav-link w--current">Home</a><a href="ourteam.html" class="nav-link w-nav-link">Our Team</a><a href="services.html" class="nav-link-2 w-nav-link">Services</a><a href="conditions-treated.html" class="nav-link-3 w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav-link-4 w-nav-link">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
+      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" aria-current="page" class="nav-link-6 w-nav-link w--current">Home</a><a href="ourteam.html" class="nav-link w-nav-link">Our Team</a><a href="services.html" class="nav-link-2 w-nav-link">Services</a><a href="conditions-treated.html" class="nav-link-3 w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav-link-4 w-nav-link">Testimonials</a><a href="contact.html" class="nav-link-5 w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -33,33 +33,30 @@
   <div id="About" class="about_section">
     <div class="main_container">
       <h2 class="section_h2">About</h2>
-      <p class="paragraph-4">Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual.Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual. Need copy about the clinic in general, not any particular individual.</p>
       <h4 class="heading-13">Unsure about the layout here...working on it</h4>
-      <div class="_2_block_row_ailment_right">
-        <div class="_65_block">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-        </div>
+      <div class="_2_block_row">
+        <div class="_65_block"></div>
         <div class="_35_block">
           <div class="div-block"></div>
         </div>
       </div>
-      <div class="w-layout-grid grid-2">
-        <h3>Monday:</h3>
-        <h3 class="heading-6">9:30AM - 6PM</h3>
-        <h3>Tuesday:</h3>
-        <h3 class="heading-7">10AM - 2PM</h3>
-        <h3>Wednesday:</h3>
-        <h3 class="heading-8">9:30AM - 6PM</h3>
-        <h3>Thursday:</h3>
-        <h3 class="heading-9">10AM - 2PM</h3>
-        <h3>Friday:</h3>
-        <h3 class="heading-10">9:30AM - 6PM</h3>
-        <h3>Saturday:</h3>
-        <h3 class="heading-11">9AM - 2PM</h3>
-        <h3>Sunday:</h3>
-        <h3 class="heading-12">CLOSED</h3>
+      <div>
+        <div class="w-layout-grid grid-2">
+          <h3 class="hours_h3_left">Monday:</h3>
+          <h3 class="hours_h3_right">9:30AM - 6PM</h3>
+          <h3 class="hours_h3_left">Tuesday:</h3>
+          <h3 class="hours_h3_right">10AM - 2PM</h3>
+          <h3 class="hours_h3_left">Wednesday:</h3>
+          <h3 class="hours_h3_right">9:30AM - 6PM</h3>
+          <h3 class="hours_h3_left">Thursday:</h3>
+          <h3 class="hours_h3_right">10AM - 2PM</h3>
+          <h3 class="hours_h3_left">Friday:</h3>
+          <h3 class="hours_h3_right">9:30AM - 6PM</h3>
+          <h3 class="hours_h3_left">Saturday:</h3>
+          <h3 class="hours_h3_right">9AM - 2PM</h3>
+          <h3 class="hours_h3_left">Sunday:</h3>
+          <h3 class="hours_h3_right">CLOSED</h3>
+        </div>
       </div>
     </div>
   </div>
@@ -179,7 +176,7 @@
       <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="_2_block_row">
         <div class="_2_block margin_right">
-          <div class="w-widget w-widget-map"></div>
+          <div data-widget-latlng="34.1523293,-118.3410588" data-widget-tooltip="Ryu Acupuncture Clinic, Inc" class="w-widget w-widget-map"></div>
         </div>
         <div class="_2_block margin_left">
           <div class="w-form">
@@ -199,14 +196,7 @@
   <div class="footer_section">
     <div class="ends_container">
       <div class="_4_block_row">
-        <div class="_4_block">
-          <h3 class="footer_h3">Ryu Acupuncture</h3>
-          <div class="w-layout-grid footer_grid_1_block">
-            <ul role="list" class="w-list-unstyled">
-              <li class="footer_link-2"></li>
-            </ul>
-          </div>
-        </div>
+        <div class="_4_block"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" alt="" class="image-2"></div>
         <div class="_4_block">
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
@@ -261,5 +251,12 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f686908b6be43eb4fb09bd7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/ryu-acupuncture.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <!--  START: Mobile Autoplay Video  -->
+  <script>
+	var mobilevideo = document.getElementsByTagName("video")[0];
+	mobilevideo.setAttribute("playsinline", "");
+	mobilevideo.setAttribute("muted", "");
+</script>
+  <!--  END: Mobile Autoplay Video  -->
 </body>
 </html>
