Added new icons to home page, along with additional 4-block row, 4 blocks and content within

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Sep 29 2020 08:25:51 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Sep 29 2020 12:57:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -33,13 +33,32 @@
   <div id="About" class="about_section">
     <div class="main_container">
       <h2 class="section_h2">About</h2>
-      <h4 class="heading-13">Unsure about the layout here...working on it</h4>
+      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <div class="_4_block_row">
+        <div class="_4_block"><img src="images/experienced_acupuncturists.png" loading="lazy" alt="" class="eastern_medicine_icons">
+          <h4 class="icon_h3">Over 20+ Experience</h4>
+          <p class="icon_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
+        <div class="_4_block"><img src="images/top_rated_professionals.png" loading="lazy" alt="" class="eastern_medicine_icons">
+          <h4 class="icon_h3">5-Star Quality Acupuncturists</h4>
+          <p class="icon_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
+        <div class="_4_block"><img src="images/world_class_quality.png" loading="lazy" alt="" class="eastern_medicine_icons">
+          <h4 class="icon_h3">World Class Quality &amp; Service</h4>
+          <p class="icon_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
+        <div class="_4_block"><img src="images/personalized_care.png" loading="lazy" alt="" class="eastern_medicine_icons">
+          <h4 class="icon_h3">Personalized Care</h4>
+          <p class="icon_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
+      </div>
       <div class="_2_block_row">
         <div class="_65_block"></div>
         <div class="_35_block">
           <div class="div-block"></div>
         </div>
       </div>
+      <div></div>
       <div>
         <div class="w-layout-grid grid-2">
           <h3 class="hours_h3_left">Monday:</h3>
